force-app/main/default/objects/Citas__c/Citas__c.object-meta.xml
<CustomObject>
    <label>Citas</label>
    <nameField>
        <label>Citas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>