force-app/main/default/objects/Citas__c/fields/Doctores__c.field-meta.xml
<CustomField>
    <fullName>Doctores__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctores</label>
    <referenceTo>Doctores__c</referenceTo>
    <relationshipLabel>Citas</relationshipLabel>
    <relationshipName>Citas</relationshipName>
    <type>Lookup</type>
</CustomField>