force-app/main/default/objects/Citas__c/fields/Fecha_de_cita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cita__c</fullName>
    <label>Fecha de cita</label>
    <type>DateTime</type>
</CustomField>