force-app/main/default/objects/Citas__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paciente</label>
    <referenceTo>Paciente__c</referenceTo>
    <relationshipLabel>Citas</relationshipLabel>
    <relationshipName>Citas</relationshipName>
    <type>Lookup</type>
</CustomField>